IE - double scrollbar fixed

--- a/sources/styles/layout2.css
+++ b/sources/styles/layout2.css
@@ -5,11 +5,14 @@
 
 .layout2-vert-first {
   vertical-align: top;
+  display: inline-block;
   overflow: hidden;
+  width: 100%;
 }
 
 .layout2-vert-second {
   vertical-align: top;
+  display: inline-block;
   position: absolute;
   left: 0;
   right: 0;
@@ -19,13 +22,14 @@
 
 .layout2-horz-first {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   height: 100%;
   overflow: hidden;
 }
 
 .layout2-horz-second {
   display: inline-block;
+  vertical-align: middle;
   position: absolute;
   right: 0;
   top: 0;
